# raytracingweekend

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.h  bmp.h  color.h  how2c  how2run  image.ppm  log.h  logged.txt  main.cpp
benchtools/headers/: benchmark.h  filelog.h  timer.h
benchtools/src/: filelog.cpp  timer.cpp
headers/: aabb.h  bmp.h  camera.h  interval.h  ray.h  rtweekend.h  simd.h  texture.h  vec3.h
lib/: aabb.h  benchmark.h  bvh.h  camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  rtweekend.h  simd.h  sphere.h  temp.h  texture.h  vec3.h
